@@ -1,3 +1,10 @@
+2001-08-02  Karl Eichwalder  <ke@suse.de>
+
+	* po-mode.el (po-find-file-coding-system-guts): Use ascii instead of
+	none.
+	(po-compute-counters): Don't start counting if there is not even a
+	header entry.
+
 2001-07-26  Bruno Haible  <haible@clisp.cons.org>
 
 	* automake.diff: Update for automake-1.4-p5.
